STB-3904 - App sync updates